--- a/assets/style.css
+++ b/assets/style.css
@@ -89,8 +89,8 @@
 /* HOME CSS */
 
 .wrapper {
-  min-height: 400px;
-  width: 960px;
+  min-height: 500px;
+  width: 1200px;
   margin: 50px auto;
   border: 1px solid #4caf50;
   border-radius: 10px;
@@ -128,12 +128,14 @@
   text-transform: uppercase;
 }
 
-.home-tbl {
+.home-tbl,
+.user-reset-tbl {
   width: 90%;
   height: 120px;
 }
 
 .home-tbl,
+.user-reset-tbl,
 th {
   margin-left: 50px;
   border: 1px solid #000;
@@ -173,9 +175,25 @@ td {
   height: 50px;
   font-size: 16px;
   color: white;
-  background-color: #4caf50;
+  background-color: var(--green-color);
   border: none;
   border-radius: 10px;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.message {
+  color: var(--green-color);
+}
+
+.err_message {
+  color: red;
+}
+
+.backlogin-btn {
+  display: block;
+  text-align: center;
+  color: var(--green-color);
+  font-size: 18px;
+  font-weight: 400;
 }
