--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,38 @@
   text-transform: uppercase;
 }
 
+.search-btn {
+  display: block;
+  width: 80px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  background-color: #92c3ff;
+  border: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+
+.add-btn {
+  display: block;
+  width: 80px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  background-color: #ff6b6b;
+  border: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+
 .home-tbl,
 .user-reset-tbl {
   width: 90%;
@@ -157,6 +189,10 @@ td {
   margin-bottom: 30px;
 }
 
+.reset-tbl-title {
+  margin-left: 30px;
+}
+
 .username-reset {
   border: none;
   border-bottom: 2px solid var(--green-color);
@@ -182,7 +218,8 @@ td {
   cursor: pointer;
 }
 
-.message {
+.message,
+.message-success {
   color: var(--green-color);
 }
 
@@ -202,17 +239,17 @@ td {
   border: 1px solid #000;
 }
 
-.password-input {
+.password-field {
   line-height: 30px;
   font-size: 18px;
   width: 90%;
 }
 
-#password-input:focus {
+.password-field:focus {
   outline: none;
 }
 
-#reset-pass-btn {
+.reset-pass-btn {
   display: block;
   width: 80px;
   height: 30px;
@@ -232,4 +269,19 @@ td {
 .error_pass {
   color: red;
   text-align: left;
+  width: 70%;
+  margin-left: 34px;
+}
+
+/* EVENT CSS */
+
+.wrapper-event {
+  min-height: 500px;
+  width: 1200px;
+  margin: 50px auto;
+  border: 1px solid var(--green-color);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
